Surround *grammar term*

--- a/ch02.md
+++ b/ch02.md
@@ -23,7 +23,7 @@ The `( Modified )` annotation indicates that an existing grammar production is b
 references the contents of the original grammar production.
 
 Similar to the ECMAScript grammar, if the phrase "[no LineTerminator here]" appears in the right-hand side of
-a production of the syntactic grammar, it indicates that the production is not a match if a LineTerminator
+a production of the syntactic grammar, it indicates that the production is not a match if a *LineTerminator*
 occurs in the input stream at the indicated position.
 
 ## 2.2 Namespaces and Named Types
@@ -186,10 +186,10 @@ Scopes may overlap, for example through nesting of modules and functions. When t
 entities with the same name overlap, the entity with the innermost declaration takes precedence and
 access to the outer entity is either not possible or only possible by qualifying its name.
 
-When an identifier is resolved as a TypeName (section 3.6.2), only classes, interfaces, enums, and type
+When an identifier is resolved as a *TypeName* (section 3.6.2), only classes, interfaces, enums, and type
 parameters are considered and other entities in scope are ignored.
 
-When an identifier is resolved as a ModuleName (section 3.6.2), only modules are considered and other
+When an identifier is resolved as a *ModuleName* (section 3.6.2), only modules are considered and other
 entities in scope are ignored.
 
 When an identifier is resolved as a PrimaryExpression (section 4.3), only instantiated modules (section
