--- a/ch03.md
+++ b/ch03.md
@@ -302,7 +302,7 @@ Constraint:
 ```
 
 Type parameter names must be unique. A compile-time error occurs if two or more type parameters in
-the same TypeParameterList have the same name.
+the same *TypeParameterList* have the same name.
 
 
 The scope of a type parameter extends over the entire declaration with which the type parameter list is
@@ -443,10 +443,10 @@ writing type literals which compose other types into new types.
 
 ```text
 Type:
-    PredefinedType
-    TypeReference
-    TypeQuery
-    TypeLiteral
+    *PredefinedType*
+    *TypeReference*
+    *TypeQuery*
+    *TypeLiteral*
 ```
 
 ### 3.6.1 Predefined Types
@@ -455,7 +455,7 @@ The any, number, boolean, string, and void keywords reference the Any type and t
 String, and Void primitive types respectively.
 
 ```text
-PredefinedType:
+*PredefinedType*:
     any
     number
     boolean
@@ -484,18 +484,18 @@ ModuleName:
     ModuleName . Identifier
 ```
 
-A TypeReference consists of a TypeName that a references a named type or type parameter. A reference to
-a generic type must be followed by a list of TypeArguments (section 3.4.2).
+A *TypeReference* consists of a *TypeName* that a references a named type or type parameter. A reference to
+a generic type must be followed by a list of *TypeArguments* (section 3.4.2).
 
-Resolution of a TypeName consisting of a single identifier is described in section 2.4.
+Resolution of a *TypeName* consisting of a single identifier is described in section 2.4.
 
-Resolution of a TypeName of the form M.N, where M is a ModuleName and N is an Identifier, proceeds by
+Resolution of a *TypeName* of the form M.N, where M is a *ModuleName* and N is an *Identifier*, proceeds by
 first resolving the module name M. If the resolution of M is successful and the resulting module contains
 an exported named type N, then M.N refers to that member. Otherwise, M.N is undefined.
 
-Resolution of a ModuleName consisting of a single identifier is described in section 2.4.
+Resolution of a *ModuleName* consisting of a single identifier is described in section 2.4.
 
-Resolution of a ModuleName of the form M.N, where M is a ModuleName and N is an Identifier, proceeds
+Resolution of a *ModuleName* of the form M.N, where M is a *ModuleName* and N is an *Identifier*, proceeds
 by first resolving the module name M. If the resolution of M is successful and the resulting module
 contains an exported module member N, then M.N refers to that member. Otherwise, M.N is undefined.
 
@@ -524,7 +524,7 @@ var v6: G<any>;                 // Error, wrong number of arguments
 var v7: G;                      // Error, no arguments
 ```
 
-A type argument is simply a Type and may itself be a type reference to a generic type, as demonstrated by
+A type argument is simply a *Type* and may itself be a type reference to a generic type, as demonstrated by
 `v4` in the example above.
 
 As described in section 3.5, a type reference to a generic type G designates a type wherein all occurrences
@@ -611,7 +611,7 @@ signature. Note that function and constructor types with multiple call or constr
 written as function or constructor type literals but must instead be written as object type literals.
 
 In order to avoid grammar ambiguities, array type literals permit only a restricted set of notations for the
-element type. Specifically, an ArrayType cannot start with a FunctionType or ConstructorType. To use one
+element type. Specifically, an *ArrayType* cannot start with a *FunctionType* or *ConstructorType*. To use one
 of those forms for the element type, an array type must be written using the `Array<T>` notation. For
 example, the type
 
@@ -674,16 +674,16 @@ PropertyName:
     NumericLiteral
 ```
 
-The PropertyName production, reproduced above from the ECMAScript grammar, permits a property
+The *PropertyName* production, reproduced above from the ECMAScript grammar, permits a property
 name to be any identifier (including a reserved word), a string literal, or a numeric literal. String literals can
 be used to give properties names that are not valid identifiers, such as names containing blanks. Numeric
 literal property names are equivalent to string literal property names with the string representation of the
 numeric literal, as defined in the ECMAScript specification.
 
-The PropertyName of a property signature must be unique within its containing type. If the property name
+The *PropertyName* of a property signature must be unique within its containing type. If the property name
 is followed by a question mark, the property is optional. Otherwise, the property is required.
 
-If a property signature omits a TypeAnnotation, the Any type is assumed.
+If a property signature omits a *TypeAnnotation*, the Any type is assumed.
 
 ### 3.7.2 Call Signatures
 
@@ -696,8 +696,8 @@ CallSignature:
     TypeParametersopt ( ParameterListopt ) TypeAnnotationopt
 ```
 
-A call signature that includes TypeParameters (section 3.4.1) is called a generic call signature. Conversely,
-a call signature with no TypeParameters is called a non-generic call signature.
+A call signature that includes *TypeParameters* (section 3.4.1) is called a generic call signature. Conversely,
+a call signature with no *TypeParameters* is called a non-generic call signature.
 
 As well as being members of object type literals, call signatures occur in method signatures (section 3.7.5),
 function expressions (section 4.9), and function declarations (section 6.1).
@@ -770,7 +770,7 @@ Parameter names must be unique. A compile-time error occurs if two or more param
 name.
 
 A parameter is permitted to include a public or private modifier only if it occurs in the parameter list of
-a ConstructorImplementation (section 8.3.1).
+a *ConstructorImplementation* (section 8.3.1).
 
 A parameter with a type annotation is considered to be of that type. A type annotation for a rest
 parameter must denote an array type.
@@ -780,13 +780,13 @@ parameter, in which case it is considered to be of type any[].
 
 When a parameter type annotation specifies a string literal type, the containing signature is a specialized
 signature (section 3.7.2.4). Specialized signatures are not permitted in conjunction with a function body,
-i.e. the FunctionExpression, FunctionImplementation, MemberFunctionImplementation, and
-ConstructorImplementation grammar productions do not permit parameters with string literal types.
+i.e. the *FunctionExpression*, *FunctionImplementation*, *MemberFunctionImplementation*, and
+*ConstructorImplementation* grammar productions do not permit parameters with string literal types.
 
 A parameter can be marked optional by following its name with a question mark (?) or by including an
 initializer. The form that includes an initializer is permitted only in conjunction with a function body, i.e.
-only in a FunctionExpression, FunctionImplementation, MemberFunctionImplementation, or
-ConstructorImplementation grammar production.
+only in a *FunctionExpression*, *FunctionImplementation*, *MemberFunctionImplementation*, or
+*ConstructorImplementation* grammar production.
 
 #### 3.7.2.3 Return Type
 
@@ -839,7 +839,7 @@ operator (section 4.11) to an instance of the containing type. A type may overlo
 defining multiple construct signatures with different parameter lists.
 
 ```text
-ConstructSignature:
+*ConstructSignature*:
     new TypeParametersopt ( ParameterListopt ) TypeAnnotationopt
 ```
 
