--- a/ch07.md
+++ b/ch07.md
@@ -34,18 +34,18 @@ ClassOrInterfaceType:
     TypeReference
 ```
 
-The Identifier of an interface declaration may not be one of the predefined type names (section 3.6.1).
+The *Identifier* of an interface declaration may not be one of the predefined type names (section 3.6.1).
 
 An interface may optionally have type parameters (section 3.4.1) that serve as placeholders for actual
 types to be provided when the interface is referenced in type references. An interface with type
 parameters is called a ***generic interface***. The type parameters of a generic interface declaration are in
-scope in the entire declaration and may be referenced in the InterfaceExtendsClause and ObjectType body.
+scope in the entire declaration and may be referenced in the *InterfaceExtendsClause* and *ObjectType* body.
 
-An interface can inherit from zero or more ***base types*** which are specified in the InterfaceExtendsClause.
+An interface can inherit from zero or more ***base types*** which are specified in the *InterfaceExtendsClause*.
 The base types must be type references to class or interface types.
 
 
-An interface has the members specified in the ObjectType of its declaration and furthermore inherits all
+An interface has the members specified in the *ObjectType* of its declaration and furthermore inherits all
 base type members that aren't hidden by declarations in the interface:
 
 * A property declaration hides a public base type property with the same name.
