--- a/ch08.md
+++ b/ch08.md
@@ -17,19 +17,19 @@ ClassDeclaration:
     class Identifier TypeParametersopt ClassHeritage { ClassBody }
 ```
 
-A ClassDeclaration declares a ***class type*** and a ***constructor function***, both with the name given by
-Identifier, in the containing module. The class type is created from the instance members declared in the
+A *ClassDeclaration* declares a ***class type*** and a ***constructor function***, both with the name given by
+*Identifier*, in the containing module. The class type is created from the instance members declared in the
 class body and the instance members inherited from the base class. The constructor function is created
 from the constructor declaration, the static member declarations in the class body, and the static
 members inherited from the base class. The constructor function initializes and returns an instance of the
 class type.
 
-The Identifier of a class declaration may not be one of the predefined type names (section 3.6.1).
+The *Identifier* of a class declaration may not be one of the predefined type names (section 3.6.1).
 
 A class may optionally have type parameters (section 3.4.1) that serve as placeholders for actual types to
 be provided when the class is referenced in type references. A class with type parameters is called a
 ***generic class***. The type parameters of a generic class declaration are in scope in the entire declaration
-and may be referenced in the ClassHeritage and ClassBody.
+and may be referenced in the *ClassHeritage* and *ClassBody*.
 
 The following example introduces both a named type called `Point` (the class type) and a member called
 `Point` (the constructor function) in the containing module.
@@ -101,7 +101,7 @@ The following constraints must be satisfied by the class heritage specification 
 error occurs:
 
 * If present, the type reference specified in the extends clause must denote a class type.
-Furthermore, the TypeName part of the type reference is required to be a reference to the class
+Furthermore, the *TypeName* part of the type reference is required to be a reference to the class
 constructor function when evaluated as an expression.
 * A class declaration may not, directly or indirectly, specify a base class that originates in the same
 declaration. In other words a class cannot, directly or indirectly, be a base class of itself, regardless
@@ -386,7 +386,7 @@ default value expressions for optional parameters. It is a compile-time error fo
 expressions to reference this. For each parameter with a default value, a statement that substitutes the
 default value for an omitted argument is included in the JavaScript generated for the constructor function.
 
-A parameter of a ConstructorImplementation may be prefixed with a public or private modifier. This is
+A parameter of a *ConstructorImplementation* may be prefixed with a public or private modifier. This is
 called a ***parameter property declaration*** and is shorthand for declaring a property with the same name
 as the parameter and initializing it with the value of the parameter. For example, the declaration
 
@@ -903,14 +903,14 @@ generates JavaScript equivalent to
 _super.prototype.<PropertyName>
 ```
 
-where PropertyName is the name of the referenced base class property. When the super property access
+where *PropertyName* is the name of the referenced base class property. When the super property access
 appears in a function call, the generated JavaScript is equivalent to
 
 ```javascript
 _super.prototype.<PropertyName>.call(this, <Arguments>)
 ```
 
-where Arguments is the code generated for the argument list specified in the function call.
+where *Arguments* is the code generated for the argument list specified in the function call.
 
 A super property access in a static member function or a static member accessor generates JavaScript
 equivalent to
@@ -919,11 +919,11 @@ equivalent to
 _super.<PropertyName>
 ```
 
-where PropertyName is the name of the referenced base class property. When the super property access
+where *PropertyName* is the name of the referenced base class property. When the super property access
 appears in a function call, the generated JavaScript is equivalent to
 
 ```javascript
 _super.<PropertyName>.call(this, <Arguments>)
 ```
 
-where Arguments is the code generated for the argument list specified in the function call.
+where *Arguments* is the code generated for the argument list specified in the function call.
