--- a/ch09.md
+++ b/ch09.md
@@ -12,13 +12,13 @@ EnumDeclaration:
     enum Identifier { EnumBodyopt }
 ```
 
-The enum type and enum object declared by an EnumDeclaration both have the name given by the
-Identifier of the declaration. The enum type is a distinct subtype of the Number primitive type. The enum
+The enum type and enum object declared by an *EnumDeclaration* both have the name given by the
+*Identifier* of the declaration. The enum type is a distinct subtype of the Number primitive type. The enum
 object is a variable of an anonymous object type containing a set of properties, all of the enum type,
 corresponding to the values declared for the enum type in the body of the declaration. The enum object's
 type furthermore includes a numeric index signature with the signature `[x: number]: string`.
 
-The Identifier of an enum declaration may not be one of the predefined type names (section 3.6.1).
+The *Identifier* of an enum declaration may not be one of the predefined type names (section 3.6.1).
 
 The example
 
@@ -84,14 +84,14 @@ constant values that are substituted in place of references to the members in th
 code. Computed members have values that are computed at run-time and not known at compile-time.
 No substitution is performed for references to computed members.
 
-The body of an enum declaration consists of an optional ConstantEnumMembers production followed by
-any number of ConstantEnumMemberSection or ComputedEnumMember productions.
+The body of an enum declaration consists of an optional *ConstantEnumMembers* production followed by
+any number of *ConstantEnumMemberSection* or *ComputedEnumMember* productions.
 
-* If present, the initial ConstantEnumMembers production introduces a series of constant members
+* If present, the initial *ConstantEnumMembers* production introduces a series of constant members
 with consecutive integral values starting at the value zero.
-* A ConstantEnumMemberSection introduces one or more constant members with consecutive
+* A *ConstantEnumMemberSection* introduces one or more constant members with consecutive
 integral values starting at the specified constant value.
-* A ComputedEnumMember introduces a computed member with a value computed by an
+* A *ComputedEnumMember* introduces a computed member with a value computed by an
 expression.
 
 Expressions specified for computed members must produce values of type Any, the Number primitive
