--- a/ch10.md
+++ b/ch10.md
@@ -26,7 +26,7 @@ internal module that doesn't meet this definition. In intuitive terms, an instan
 which a module object instance is created, whereas a non-instantiated module is one for which no code is
 generated.
 
-When a module identifier is referenced as a ModuleName (section 3.6.2) it denotes a container of module
+When a module identifier is referenced as a *ModuleName* (section 3.6.2) it denotes a container of module
 and type names, and when a module identifier is referenced as a PrimaryExpression (section 4.3) it
 denotes the singleton module instance. For example:
 
@@ -44,13 +44,13 @@ var q: m.P;     // Error
 ```
 
 Above, when `M` is used as a PrimaryExpression it denotes an object instance with a single member `a` and
-when `M` is used as a ModuleName it denotes a container with a single type member `P`. The final line in
+when `M` is used as a *ModuleName* it denotes a container with a single type member `P`. The final line in
 the example is an error because `m` is a variable which cannot be referenced in a type name.
 
 If the declaration of `M` above had excluded the exported variable `a`, `M` would be a non-instantiated
 module and it would be an error to reference `M` as a PrimaryExpression.
 
-An internal module declaration that specifies an IdentifierPath with more than one identifier is equivalent
+An internal module declaration that specifies an *IdentifierPath* with more than one identifier is equivalent
 to a series of nested single-identifier internal module declarations where all but the outermost are
 automatically exported. For example:
 
@@ -114,11 +114,11 @@ EntityName:
     ModuleName . Identifier
 ```
 
-An EntityName consisting of a single identifier is resolved as a ModuleName and is thus required to
+An *EntityName* consisting of a single identifier is resolved as a *ModuleName* and is thus required to
 reference an internal module. The resulting local alias references the given internal module and is itself
 classified as an internal module.
 
-An EntityName consisting of more than one identifier is resolved as a ModuleName followed by an
+An *EntityName* consisting of more than one identifier is resolved as a *ModuleName* followed by an
 identifier that names one or more exported entities in the given module. The resulting local alias has all
 the meanings and classifications of the referenced entity or entities. (As many as three distinct meanings
 are possible for an entity name—namespace, type, and member.) In effect, it is as if the imported entity or
@@ -143,7 +143,7 @@ module B {
 within `B`, `Y` is an alias only for module `A` and not the local interface `A`, whereas `Z` is an alias for all
 exported meanings of `A.X`, thus denoting both an interface type and a variable.
 
-If the ModuleName portion of an EntityName references an instantiated module, the ModuleName is
+If the *ModuleName* portion of an *EntityName* references an instantiated module, the *ModuleName* is
 required to reference the module instance when evaluated as an expression. In the example
 
 ```typescript
@@ -169,9 +169,9 @@ When an import statement includes an export modifier, all meanings of the local 
 An export declaration declares an externally accessible module member. An export declaration is simply a
 regular declaration prefixed with the keyword export.
 
-Exported class, interface, and enum types can be accessed as a TypeName (section 3.6.2) of the form M.T,
+Exported class, interface, and enum types can be accessed as a *TypeName* (section 3.6.2) of the form M.T,
 where M is a reference to the containing module and T is the exported type name. Likewise, as part of a
-TypeName, exported modules can be accessed as a ModuleName of the form M.N, where M is a reference
+*TypeName*, exported modules can be accessed as a *ModuleName* of the form M.N, where M is a reference
 to the containing module and N is the exported module.
 
 Exported variable, function, class, enum, module, and import alias declarations become properties on the
@@ -192,19 +192,19 @@ must be at least as accessible as the exported member, or otherwise an error occ
 The named types upon which a member depends are the named types occurring in the transitive closure
 of the ***directly depends*** on relationship defined as follows:
 
-* A variable directly depends on the Type specified in its type annotation.
-* A function directly depends on each Type specified in a parameter or return type annotation.
-* A class directly depends on each Type specified as a type parameter constraint, each
-TypeReference specified as a base class or implemented interface, and each Type specified in a
+* A variable directly depends on the *Type* specified in its type annotation.
+* A function directly depends on each *Type* specified in a parameter or return type annotation.
+* A class directly depends on each *Type* specified as a type parameter constraint, each
+*TypeReference* specified as a base class or implemented interface, and each *Type* specified in a
 constructor parameter type annotation, member variable type annotation, member function
 parameter or return type annotation, member accessor parameter or return type annotation, or
 index signature type annotation.
-* An interface directly depends on each Type specified as a type parameter constraint, each
-TypeReference specified as a base interface, and the ObjectType specified as its body.
+* An interface directly depends on each *Type* specified as a type parameter constraint, each
+*TypeReference* specified as a base interface, and the *ObjectType* specified as its body.
 * A module directly depends on its exported members.
-* A Type or ObjectType directly depends on every TypeReference that occurs within the type at any
+* A *Type* or *ObjectType* directly depends on every *TypeReference* that occurs within the type at any
 level of nesting.
-* A TypeReference directly depends on the type it references and on each Type specified as a type
+* A *TypeReference* directly depends on the type it references and on each *Type* specified as a type
 argument.
 
 A named type T having a root module R (section 2.3) is said to be ***at least as accessible as*** a member M if
@@ -339,8 +339,8 @@ var <ModuleName>;
 })(<ModuleName>||(<ModuleName>={}));
 ```
 
-where ModuleName is the name of the module and ModuleStatements is the code generated for the
-statements in the module body. The ModuleName function parameter may be prefixed with one or more
+where *ModuleName* is the name of the module and ModuleStatements is the code generated for the
+statements in the module body. The *ModuleName* function parameter may be prefixed with one or more
 underscore characters to ensure the name is unique within the function body. Note that the entire module
 is emitted as an anonymous function that is immediately executed. This ensures that local variables are in
 their own lexical environment isolated from the surrounding context. Also note that the generated
@@ -354,7 +354,7 @@ var <Alias> = <EntityName>;
 ```
 
 This code is emitted only if the imported entity is referenced as a PrimaryExpression somewhere in the
-body of the importing module. If an imported entity is referenced only as a TypeName or ModuleName,
+body of the importing module. If an imported entity is referenced only as a *TypeName* or *ModuleName*,
 nothing is emitted. This ensures that types declared in one internal module can be referenced through an
 import alias in another internal module with no run-time overhead.
 
