--- a/ch11.md
+++ b/ch11.md
@@ -53,10 +53,10 @@ compilation, but no output is generated from declaration source files.
 
 The source elements permitted in a TypeScript implementation source file are a superset of those
 supported by JavaScript. Specifically, TypeScript extends the JavaScript grammar's existing
-VariableDeclaration (section 5.1) and FunctionDeclaration (section 6.1) productions, and adds
-InterfaceDeclaration (section 7.1), ClassDeclaration (section 8.1), EnumDeclaration (section 9.1),
-ModuleDeclaration (section 10.1), ImportDeclaration (section 10.3), ExternalImportDeclaration (section
-11.2.2), ExportAssignment (section 11.2.4), and AmbientDeclaration (section 12.1) productions.
+*VariableDeclaration* (section 5.1) and *FunctionDeclaration* (section 6.1) productions, and adds
+*InterfaceDeclaration* (section 7.1), *ClassDeclaration* (section 8.1), *EnumDeclaration* (section 9.1),
+*ModuleDeclaration* (section 10.1), *ImportDeclaration* (section 10.3), *ExternalImportDeclaration* (section
+11.2.2), *ExportAssignment* (section 11.2.4), and *AmbientDeclaration* (section 12.1) productions.
 
 Declaration source files are restricted to contain declarations only. Declaration source files can be used to
 declare the static type information associated with existing JavaScript code in an adjunct manner. They are
@@ -182,10 +182,10 @@ the resulting file path or otherwise an error occurs. For example, in a module w
 `C:/src/ui/main`, the external module names `./editor` and `../lib/io` reference modules with the file
 paths `C:/src/ui/editor` and `C:/src/lib/io`.
 * If the import declaration specifies a top-level external module name and the program contains an
-AmbientExternalModuleDeclaration (section 12.1.6) with a string literal that specifies that exact
+*AmbientExternalModuleDeclaration* (section 12.1.6) with a string literal that specifies that exact
 name, then the import declaration references that ambient external module.
 * If the import declaration specifies a top-level external module name and the program contains no
-AmbientExternalModuleDeclaration (section 12.1.6) with a string literal that specifies that exact
+*AmbientExternalModuleDeclaration* (section 12.1.6) with a string literal that specifies that exact
 name, the name is resolved in a host dependent manner (for example by considering the name
 relative to a module name space root). If a matching module cannot be found an error occurs.
 
@@ -203,7 +203,7 @@ ExternalModuleReference:
     require ( StringLiteral )
 ```
 
-The string literal specified in an ExternalModuleReference is interpreted as an external module name
+The string literal specified in an *ExternalModuleReference* is interpreted as an external module name
 (section 11.2.1).
 
 An external import declaration introduces a local identifier that references a given external module. The
@@ -293,7 +293,7 @@ An external import declaration is represented in the generated JavaScript as a v
 to the `require` function provided by the module system host. A variable declaration and `require` call is
 emitted for a particular imported module only if the imported module, or a local alias (section 10.3) that
 references the imported module, is referenced as a PrimaryExpression somewhere in the body of the
-importing module. If an imported module is referenced only as a ModuleName or TypeQueryExpression,
+importing module. If an imported module is referenced only as a *ModuleName* or *TypeQueryExpression*,
 nothing is emitted.
 
 An example:
@@ -371,7 +371,7 @@ The special `require` and `exports` dependencies are always present. Additional 
 dependencies array and the parameter list as required to represent imported external modules. Similar to
 the code generation for CommonJS Modules, a dependency entry is generated for a particular imported
 module only if the imported module is referenced as a PrimaryExpression somewhere in the body of the
-importing module. If an imported module is referenced only as a ModuleName, no dependency is
+importing module. If an imported module is referenced only as a *ModuleName*, no dependency is
 generated for that module.
 
 [CommonJS Modules 1.0 specification]: http://www.commonjs.org/specs/modules/1.0/
