--- a/ch12.md
+++ b/ch12.md
@@ -103,8 +103,8 @@ AmbientEnumMember:
     PropertyName = NumericLiteral
 ```
 
-An AmbientEnumMember that includes an NumericLiteral value is considered a constant member. An
-AmbientEnumMember with no NumericLiteral value is considered a computed member.
+An *AmbientEnumMember* that includes an *NumericLiteral* value is considered a constant member. An
+*AmbientEnumMember* with no *NumericLiteral* value is considered a computed member.
 
 ### 12.1.5 Ambient Module Declarations
 
@@ -131,13 +131,13 @@ AmbientModuleElement:
     exportopt ImportDeclaration
 ```
 
-Except for ImportDeclarations, AmbientModuleElements always declare exported entities regardless of
+Except for ImportDeclarations, *AmbientModuleElements* always declare exported entities regardless of
 whether they include the optional export modifier.
 
 ### 12.1.6 Ambient External Module Declarations
 
-An AmbientExternalModuleDeclaration declares an external module. This type of declaration is permitted
-only in the global module. The StringLiteral must specify a top-level external module name. Relative
+An *AmbientExternalModuleDeclaration* declares an external module. This type of declaration is permitted
+only in the global module. The *StringLiteral* must specify a top-level external module name. Relative
 external module names are not permitted.
 
 ```text
@@ -157,7 +157,7 @@ AmbientExternalModuleElement:
     exportopt ExternalImportDeclaration
 ```
 
-An ExternalImportDeclaration in an AmbientExternalModuleDeclaration may reference other external
+An *ExternalImportDeclaration* in an *AmbientExternalModuleDeclaration* may reference other external
 modules only through top-level external module names. Relative external module names are not
 permitted.
 
