--- a/ch04.md
+++ b/ch04.md
@@ -47,7 +47,7 @@ code, as described in section 4.9.2.
 
 ## 4.3 Identifiers
 
-When an expression is an Identifier, the expression refers to the most nested module, class, enum,
+When an expression is an *Identifier*, the expression refers to the most nested module, class, enum,
 function, variable, or parameter with that name whose scope (section 2.4) includes the location of the
 reference. The type of such an expression is the type associated with the referenced entity:
 
@@ -243,7 +243,7 @@ ArrowFormalParameters:
 ```
 
 The terms ***standard function expression*** and ***arrow function expression*** are used to refer to the
-FunctionExpression and ArrowFunctionExpression forms respectively. When referring to either, the generic
+*FunctionExpression* and *ArrowFunctionExpression* forms respectively. When referring to either, the generic
 term ***function expression*** is used.
 
 The type of a function expression is an object type containing a single call signature with parameter and
@@ -641,7 +641,7 @@ and the resulting type of `pairs` is therefore `{ name: string; age: number }[]`
 
 ### 4.12.3 Grammar Ambiguities
 
-The inclusion of type arguments in the Arguments production (section 4.12) gives rise to certain
+The inclusion of type arguments in the *Arguments* production (section 4.12) gives rise to certain
 ambiguities in the grammar for expressions. For example, the statement
 
 ```typescript
@@ -653,10 +653,10 @@ interpreted as a call to `f` with one argument, which is a call to a generic fun
 arguments and one regular argument.
 
 The grammar ambiguity is resolved as follows: In a context where one possible interpretation of a
-sequence of tokens is an Arguments production, if the initial sequence of tokens forms a syntactically
-correct TypeArguments production and is followed by a `(` token, then the sequence of tokens is
-processed an Arguments production, and any other possible interpretation is discarded. Otherwise, the
-sequence of tokens is not considered an Arguments production.
+sequence of tokens is an *Arguments* production, if the initial sequence of tokens forms a syntactically
+correct *TypeArguments* production and is followed by a `(` token, then the sequence of tokens is
+processed an *Arguments* production, and any other possible interpretation is discarded. Otherwise, the
+sequence of tokens is not considered an *Arguments* production.
 
 This rule means that the call to `f` above is interpreted as a call with one argument, which is a call to a
 generic function `g` with two type arguments and one regular argument. However, the statements
@@ -1002,7 +1002,7 @@ Contextual typing of an expression e by a type T proceeds as follows:
 described in section 4.5.
 * If e is an ArrayLiteral and T is an object type with a numeric index signature, e is processed with
 the contextual type T, as described in section 4.6.
-* If e is a FunctionExpression or ArrowFunctionExpression with no type parameters and no parameter
+* If e is a *FunctionExpression* or *ArrowFunctionExpression* with no type parameters and no parameter
 or return type annotations, T is a function type with exactly one call signature and T's call
 signature is non-generic, then any inferences made for type parameters referenced by the
 parameters of T's call signature are fixed (section 4.12.2) and e is processed with the contextual
